script_error.txt
C:\Users\Intel\Desktop\mumin\api\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
scripts/create-dev-key.ts(28,13): error TS2353: Object literal may only specify known properties, and 'totalDataTransferred' does not exist in type 'Without<ApiKeyCreateInput, ApiKeyUncheckedCreateInput> & ApiKeyUncheckedCreateInput'.

    at createTSError (C:\Users\Intel\Desktop\mumin\api\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (C:\Users\Intel\Desktop\mumin\api\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (C:\Users\Intel\Desktop\mumin\api\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (C:\Users\Intel\Desktop\mumin\api\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (C:\Users\Intel\Desktop\mumin\api\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1893:10
    at Object.require.extensions.<computed> [as .ts] (C:\Users\Intel\Desktop\mumin\api\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1481:32)
    at Module._load (node:internal/modules/cjs/loader:1300:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2353 ]
}
